--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <meta name="keywords" content="spotify premium apk, descargar spotify premium gratis, spotify mod apk, música sin anuncios, alta calidad de sonido">
     <meta name="robots" content="index, follow">
     <link rel="icon" href="1.png" type="image/x-icon">
-    <link rel="canonical" href="https://www.spotiwaves.com/spotify-premium-apk/" />
+    <link rel="canonical" href="https://descargar-spotify.pages.dev/" />
     <meta property="og:title" content="Descargar Spotify Premium APK 2024 - Sin Anuncios y Alta Calidad de Sonido">
     <meta property="og:description" content="Disfruta de las características premium sin costo: sin anuncios, calidad de audio superior y más con Spotify Premium APK 2024.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.spotiwaves.com/spotify-premium-apk/">
-    <meta property="og:image" content="https://www.spotiwaves.com/Spotifypremium.jpg">
+    <meta property="og:url" content="https://descargar-spotify.pages.dev/">
+    <meta property="og:image" content="https://descargar-spotify.pages.dev/Spotifypremium.jpg">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Descargar Spotify Premium APK 2024">
     <meta name="twitter:description" content="Descubre las ventajas de Spotify Premium sin costo con esta APK modificada.">
-    <meta name="twitter:image" content="https://www.spotiwaves.com/Spotifypremium.jpg">
-    <link rel="alternate" href="https://www.spotiwaves.com/spotify-premium-apk/" hreflang="es" />
-    <link rel="alternate" href="https://www.spotiwaves.com/en/spotify-premium-apk/" hreflang="en" />
+    <meta name="twitter:image" content="https://descargar-spotify.pages.dev/Spotifypremium.jpg">
+    <link rel="alternate" href="https://descargar-spotify.pages.dev/" hreflang="es" />
+    <link rel="alternate" href="https://descargar-spotify.pages.dev/" hreflang="en" />
     
     <script type="application/ld+json">
     {
@@ -27,12 +27,12 @@
       "@type": "WebPage",
       "name": "Descargar Spotify Premium APK 2024",
       "description": "Todas las características premium están desbloqueadas: saltos ilimitados, alta calidad de audio, sin anuncios, y descarga sin conexión con Spotify Premium APK 2024!",
-      "url": "https://www.spotiwaves.com/spotify-premium-apk/",
-      "image": "https://www.spotiwaves.com/Spotifypremium.jpg",
+      "url": "https://descargar-spotify.pages.dev/",
+      "image": "https://descargar-spotify.pages.dev/Spotifypremium.jpg",
       "inLanguage": "es",
       "potentialAction": {
         "@type": "SearchAction",
-        "target": "https://www.spotiwaves.com/?s={search_term_string}",
+        "target": "https://descargar-spotify.pages.dev/?s={search_term_string}",
         "query-input": "required name=search_term_string"
       }
     }
