--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="6lraOp68YlT_7aVshiaF2ncY71uBuWTQ24WhQCsuSw0" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Descargar Spotify Premium APK 2024</title>
     <meta name="description" content="Todas las características premium son unloacked, saltando tiempo ilimitado, audio de alta calidad, sin anuncios y descarga sin conexión con Spotify Premium APK 2024!">
